Fixed Bug on landscape 640x360 viewports
Fixed a bug that when certain phones are in landscape the splash texts
overflows and decimates the layout.

--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,12 @@ footer img.footer-logo {
 
 /* Medium only */
 @media screen and (min-width: 40em) and (max-width: 63.9375em) {
+	header {
+		min-height: 800px;
+	}
+	header .container {
+		padding: 0 10px;
+	}
 	header h1.headerphrase {
 		font-size: 65pt;
 	}
